<resources>
    <string name="app_name">DigitalPurse</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_login_here">Already registered? Login Here</string>
</resources>