<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="267dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="253dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/hint_text"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/hint_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/hint_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/register"
        android:layout_width="131dp"
        android:layout_height="55dp"
        android:layout_marginBottom="36dp"
        android:background="#5B1D93"
        android:hint="@string/register"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered_login_here"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.254" />

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>